@@ -11,3 +11,4 @@ Copyright (C) 2005 Jeremy Thomerson   <jthomerson a.t users d.o.t sourceforge d.
 Copyright (C) 2005 Nathan Wilson      <ndciwilson a.t users d.o.t sourceforge d.o.t net>
 Copyright (C) 2005 Alex Ruiz          <alruiz15 a.t users d.o.t yahoo d.o.t com>
 Copyright (C) 2005 James Seigel       <cgul a.t users d.o.t sourceforge d.o.t net>
+Copyright (C) 2005 Björn Beskow       <bbeskow a.t users d.o.t sourceforge d.o.t net>
